<resources>
    <string name="app_name">Git GRIT ?</string>
    <string name="action_feedback">Send FeedBack</string>
    <string name="angela_duckwork">Angela Duckwork</string>
    <string name="angela_describtion">The Grit Scale was developed by Angela Duckworth, a professor of psychology at the University of Pennsylvania, to identify traits that might predict success.</string>
    <string name="radio1">Very much like me</string>
    <string name="radio2">Mostly like me</string>
    <string name="radio3">Somewhat like me</string>
    <string name="radio4">Not much like me </string>
    <string name="radio5">Not like me at all</string>
    <string name="title1">1.I have overcome setbacks to conquer an important challenge</string>
    <string name="title2">2. New ideas and projects sometimes distract me from previous ones. </string>
    <string name="title3">3.My interests change from year to year.</string>
    <string name="title4">4. Setbacks don’t discourage me. </string>
    <string name="title5">5. I have been obsessed with a certain idea or project for a short time but later lost interest.</string>
    <string name="title6">6. I am a hard worker. </string>
    <string name="title7">7. I often set a goal but later choose to pursue a different one.</string>
    <string name="title8">8. I have difficulty maintaining my focus on projects that take more than a few months to complete.</string>
    <string name="title9">9. I finish whatever I begin.</string>
    <string name="title10">10.I have achieved a goal that took years of work. </string>
    <string name="title11">11.I become interested in new pursuits every few months.</string>
    <string name="title12">12.I am diligent. </string>
    <string name="shareResult"> "HI! I got my grit score from this app"It define my passion and perseverance for long-term goals.
        Share among your friends.Want to know more about grit and find yours.Got a goal? If you are going to reach it, you need some grit. It determines if and how you are able to push through challenges and be successful (in whatever you do).
        Take the test to find out your grit score, and then read more about its caveats, too.Download it at https://www.sumanastani.com.np/blog and know yout Grit as well</string>
    <string name="about_grit">Know more about grit</string>
    <string name="gritsplashIntro">Got Grit? Take the test to find out your grit score.</string>
    <string name="gritsplashInfo2">scale your perserverance and passion for long term goal.A research for your self-reflection.</string>
    <string name="feedBackTitle">Any issues | Feedback | New Ideas | Collaboration ?</string>
    <string name="FeedBackMEssage">Namaste ! I am  student of Computer Science. Diving deep to the never ending knowledge of sea has always been my passion. In my free time I love to code, learn and share the knowledge. If you have any feedback, project collaboration. Do Ping me back.</string>
    <string-array name="gritInformation">
        <item>There are no right or wrong answers, so just answer honestly, considering how you compare to most people. At the end, you’ll get a score that reflects how passionate and persevering you see yourself to be.</item>
        <item>A combination of passion and perseverance for a singularly important goal—is the hallmark of high achievers in every domain.</item>
        <item> Grit offers a truly sane perspective: that true success comes when we devote ourselves to endeavors that give us joy and purpose.”</item>
        <item>Grit is the tendency to sustain interest in and effort toward very long-term goals (Duckworth et al., 2007)</item>
        <item>The Mind Lead The Body Obeys. Grow your Mind , Grow Your Life</item>
        <item>Talent and luck matter to success. But talent and luck are no guarantee of grit. And in the very long run, I think grit may matter as least as much, if not more.</item>
        <item>There are no right or wrong answers, so just answer honestly, considering how you compare to most people. At the end, you’ll get a score that reflects how passionate and persevering you see yourself to be.</item>
    </string-array>
    <string-array name="gritIntro_Question">
        <item>1. What is grit?</item>
        <item>2. Is there anything I can do to build my grit?</item>
        <item>3. A lot of your work is for kids in school. What about building grit in the workforce?</item>
        <item>4. What can I use the Grit Scale for?</item>
        <item>5. If I’m gritty about one thing, will I be gritty about other things?</item>
        <item>6. When does grit matter most?</item>
        <item>7. Is grit the same as self-control or conscientiousness?</item>
        <item>8. Can you be too gritty?</item>
        <item>9. Are women grittier than men? Or are men grittier than women?</item>
        <item>10. Does the message of grit imply that poverty and inequality don’t matter?</item>
        <item>11. I don’t understand what you mean by “talent”?</item>
        <item>12. Is grit more important than honesty and kindness?</item>
        <item>13. Isn’t grit, like everything else, in your genes? So why write a book about how to grow grit?</item>
        <item>14. Isn’t it more important to be happy than successful?</item>
        <item>15. There is a chapter in “Grit” on parenting. Where is the chapter on teaching grit in schools?</item>
    </string-array>
</resources>